# file_encryptor

./: CMakeLists.txt  Makefile
include/: file_encryptor.h
src/: app.manifest  constants.cpp  constants.h  file_encryptor.cpp  gui.cpp  gui.h  main.cpp  main_gui.cpp  resources.rc
src/crypto/: chacha20.cpp  chacha20.h  crypto_utils.h  ecc.cpp  ecc.h  steganography.cpp  steganography.h
src/io/: file_handler.cpp  file_handler.h
src/keys/: key_manager.cpp  key_manager.h
src/ui/: cli.cpp  cli.h  gui.cpp  gui.h
